--- a/project/Olook/app/src/main/res/values/strings.xml
+++ b/project/Olook/app/src/main/res/values/strings.xml
@@ -2,4 +2,7 @@
     <string name="app_name">OLook</string>
     <string name="title_activity_maps">Map</string>
     <string name="hello_blank_fragment">Hello World</string>
+    <string name="drawer_open">open</string>
+    <string name="drawer_close">close</string>
+    <string name="action_settings">Settings</string>
 </resources>
