--- a/project/Olook/app/src/main/res/values/strings.xml
+++ b/project/Olook/app/src/main/res/values/strings.xml
@@ -1,5 +1,6 @@
 <resources>
     <string name="app_name">OLook</string>
+    <string name="google_app_id">OLook</string>
     <string name="title_activity_maps">Map</string>
     <string name="hello_blank_fragment">Hello World</string>
     <string name="drawer_open">open</string>
