Changed Arraylist of Arraylists to Hashmap of Arraylists

--- a/project/Olook/app/src/main/res/values/strings.xml
+++ b/project/Olook/app/src/main/res/values/strings.xml
@@ -6,4 +6,7 @@
     <string name="drawer_open">open</string>
     <string name="drawer_close">close</string>
     <string name="action_settings">Settings</string>
+    <string name="filter_name_attrait">Attraits</string>
+    <string name="filter_name_parking">Stationnement public</string>
+    <string name="filter_name_zap">ZAP</string>
 </resources>
