--- a/project/Olook/app/src/main/res/values/strings.xml
+++ b/project/Olook/app/src/main/res/values/strings.xml
@@ -10,4 +10,5 @@
     <string name="filter_name_attrait">Attraits</string>
     <string name="filter_name_parking">Stationnement public</string>
     <string name="filter_name_zap">ZAP</string>
+    <string name="filter_name_parcometre">Parcomètre</string>
 </resources>
