--- a/project/Olook/app/src/main/res/values/strings.xml
+++ b/project/Olook/app/src/main/res/values/strings.xml
@@ -11,11 +11,13 @@
     <string name="filter_name_parking">Stationnement public</string>
     <string name="filter_name_zap">ZAP</string>
     <string name="filter_name_parcometre">Parcomètre</string>
+    <string name="filter_name_restorant">Restaurant</string>
 
     <string-array name="filter_array">
         <item>Attraits</item>
         <item>Stationnement public</item>
         <item>ZAP</item>
         <item>Parcomètre</item>
+        <item>Restaurant</item>
     </string-array>
 </resources>
