Added events to Data Manager

--- a/project/Olook/app/src/main/res/values/strings.xml
+++ b/project/Olook/app/src/main/res/values/strings.xml
@@ -14,5 +14,6 @@
         <item>ZAP</item>
         <item>Parcomètre</item>
         <item>Restaurant</item>
+        <item>Évènement</item>
     </string-array>
 </resources>
